Fixed issues with Context Menu items and Touch, Mkdir widgets overlapping with menu on mobile.

--- a/app/src/css/app.css
+++ b/app/src/css/app.css
@@ -1302,6 +1302,14 @@ aside.creation nav a span {
 			max-width: initial;
 			min-width: 320px;
 	}
+    .DataPane.mkdir {
+        bottom: inherit !important;
+        top: 54px !important;
+    }
+    .DataPane.touch {
+        bottom: inherit !important;
+        top: 54px !important;
+    }
 	nav a {
 		margin-right: 0;
     	margin-left: 6px;
@@ -1838,6 +1846,13 @@ div.formContainer {
     -webkit-transform: scale(0.2,0.2) perspective(150px) translateZ(-12px);
     -moz-transform: scale(0.2,0.2) perspective(150px) translateZ(-12px);
     transform: scale(0.2,0.2) perspective(150px) translateZ(-12px);
+}
+.UI-Context-Menu ul {
+    padding-left: 0;
+    margin-top: 0;
+}
+.UI-Context-Menu ul li {
+    list-style-type: none;
 }
 .Image .UI-Context-Menu {
     top: 0;
